[plugin-web-app] Unify storing of asserting web elements (#859)