@@ -19,7 +19,6 @@ package org.vividus.bdd.steps.ui.web.validation;
 import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.not;
 
-import java.util.Arrays;
 import java.util.List;
 
 import javax.inject.Inject;
@@ -29,6 +28,7 @@ import org.hamcrest.Matcher;
 import org.openqa.selenium.WebElement;
 import org.vividus.bdd.steps.ui.web.Dimension;
 import org.vividus.ui.web.action.IWebElementActions;
+import org.vividus.ui.web.context.IWebUiContext;
 import org.vividus.ui.web.util.ElementUtil;
 
 public class ElementValidations implements IElementValidations
@@ -37,7 +37,8 @@ public class ElementValidations implements IElementValidations
     public static final int ACCURACY = 2;
 
     @Inject private IWebElementActions webElementActions;
-    @Inject private IHighlightingSoftAssert softAssert;
+    @Inject private IDescriptiveSoftAssert softAssert;
+    @Inject private IWebUiContext webUiContext;
 
     @Override
     public boolean assertIfElementContainsText(WebElement element, String text, boolean isTrue)
@@ -62,8 +63,10 @@ public class ElementValidations implements IElementValidations
                     description.append(" (Difference in substring: \"").append(difference).append("\")");
                 }
             }
-            return softAssert.withHighlightedElement(element).assertThat(description.toString(), actualText,
-                    matcher);
+            String elementDescription = description.toString();
+            String elementText = actualText;
+            return webUiContext.withAssertingWebElements(List.of(element),
+                () -> softAssert.assertThat(elementDescription, elementText, matcher));
         }
         return false;
     }
@@ -71,8 +74,13 @@ public class ElementValidations implements IElementValidations
     @Override
     public boolean assertIfElementContainsTooltip(WebElement element, String expectedTooltip)
     {
-        return element != null && softAssert.withHighlightedElement(element)
-                .assertEquals("Element has correct tooltip", expectedTooltip, element.getAttribute("title"));
+        if (element != null)
+        {
+            return webUiContext.withAssertingWebElements(List.of(element),
+                () -> softAssert.assertEquals("Element has correct tooltip", expectedTooltip,
+                    element.getAttribute("title")));
+        }
+        return false;
     }
 
     @Override
@@ -82,11 +90,13 @@ public class ElementValidations implements IElementValidations
         boolean result = elements.size() > 1;
         for (int i = 1; i < elements.size(); i++)
         {
-            WebElement element = elements.get(i);
-            result = softAssert.withHighlightedElements(elements).assertEquals(
+            int currentIndex = i;
+            WebElement element = elements.get(currentIndex);
+            boolean currentResult = result;
+            result = webUiContext.withAssertingWebElements(elements, () -> softAssert.assertEquals(
                     String.format("Element <%1$s:%2$s[%3$s]> has correct '%4$s'", element.getTagName(),
-                            element.getText(), i, dimension),
-                    firstElementDimension, dimension.getDimension(element.getSize())) && result;
+                            element.getText(), currentIndex, dimension),
+                    firstElementDimension, dimension.getDimension(element.getSize())) && currentResult);
         }
         return result;
     }
@@ -94,9 +104,12 @@ public class ElementValidations implements IElementValidations
     @Override
     public boolean assertIfElementHasWidthInPerc(WebElement parent, WebElement element, int widthInPerc)
     {
-        return parent != null && element != null
-                && softAssert.withHighlightedElements(Arrays.asList(parent, element)).assertEquals(
-                        "Element has correct width", widthInPerc, ElementUtil.getElementWidthInPerc(parent, element),
-                        ACCURACY);
+        if (parent != null && element != null)
+        {
+            return webUiContext.withAssertingWebElements(List.of(parent, element),
+                () -> softAssert.assertEquals("Element has correct width", widthInPerc,
+                        ElementUtil.getElementWidthInPerc(parent, element), ACCURACY));
+        }
+        return false;
     }
 }
